feat: get category by id
